// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caip10LinkHandler applies anchor commit correctly 1`] = `
{
  "anchorProof": {
    "chainId": "fakechain:123",
  },
  "anchorStatus": 3,
  "content": "did:3:testdid1",
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1666728832,
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1666728832,
      "type": 1,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts55jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1666728832,
      "type": 2,
    },
  ],
  "metadata": {
    "controllers": [
      "0x0544dcf4fce959c6c4f3b7530190cb5e1bd67cb8@eip155:1",
    ],
    "family": "caip10-eip155:1",
    "lastUpdate": 1608116721,
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Caip10LinkHandler applies genesis commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": null,
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "0x0544dcf4fce959c6c4f3b7530190cb5e1bd67cb8@eip155:1",
    ],
    "family": "caip10-eip155:1",
  },
  "next": {
    "content": null,
  },
  "signature": 0,
  "type": 1,
}
`;

exports[`Caip10LinkHandler applies signed commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": null,
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
  ],
  "metadata": {
    "controllers": [
      "0x0544dcf4fce959c6c4f3b7530190cb5e1bd67cb8@eip155:1",
    ],
    "family": "caip10-eip155:1",
  },
  "next": {
    "content": "did:3:testdid1",
    "metadata": {
      "controllers": [
        "0x0544dcf4fce959c6c4f3b7530190cb5e1bd67cb8@eip155:1",
      ],
      "family": "caip10-eip155:1",
      "lastUpdate": 1608116721,
    },
  },
  "signature": 2,
  "type": 1,
}
`;
